backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    component: backend
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
    nodePort: 30001
