backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: "SEUHOSTNAME.COM"
    http:
      paths:
      - pathType: Prefix
        path: "/upload/"
        backend:
          service:
            name: backend-service
            port:
              number: 3001
      - pathType: Prefix
        path: "/download/"
        backend:
          service:
            name: backend-service
            port:
              number: 3001
